
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int vfs_context_t ;
struct vnode_attr {int dummy; } ;
struct vnode {int v_label; } ;
struct ucred {int dummy; } ;
typedef int kauth_cred_t ;


 int MAC_CHECK (int ,int ,struct ucred*,struct vnode*,int ,struct vnode_attr*) ;
 int mac_cred_check_enforce (int ) ;
 int mac_vnode_enforce ;
 int vfs_context_ucred (int ) ;
 int vnode_check_getattr ;

int
mac_vnode_check_getattr(vfs_context_t ctx, struct ucred *file_cred,
    struct vnode *vp, struct vnode_attr *va)
{
 kauth_cred_t cred;
 int error;






 cred = vfs_context_ucred(ctx);
 if (!mac_cred_check_enforce(cred))
  return (0);
 MAC_CHECK(vnode_check_getattr, cred, file_cred, vp, vp->v_label, va);
 return (error);
}
